--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: mongo:latest
     restart: always
     volumes: 
-      - db:/data/db
+      - mongo_db:/data/db
     ports:
       - "27017:27017"
     expose:
