--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     command: uvicorn main:app --host 0.0.0.0 --port 8000
     environment:
       DEBUG: 1
-      BACKEND_HOST: localhost
+      BACKEND_HOST: "0.0.0.0"
       BACKEND_PORT: "8000"
       MONGODB_URI: mongodb://mongo_db:27017
       CITY_API_HOST: wft-geo-db.p.rapidapi.com
